# Group-3

Assignment_2/: CMakeLists.txt  Readme.md  contriblist.txt  kem_kyber512.c  list_algos.c  sign_falcon512.c
Assignment_3/: .gitignore  Readme.md  package-lock.json  package.json  server.js  useSocket.js
Assignment_3/components/: ChatInput.js  MessageBubble.js  UserList.js
Assignment_3/hooks/: useSocket.js
Assignment_3/lib/: db.js  socket.js
Assignment_3/models/: Message.js  Users.js
Assignment_3/pages/: _app.js  chat.js  forgot_password.js  index.js  register.js
Assignment_4/: Readme.md  package-lock.json  package.json  postcss.config.js
Assignment_4/hooks/: rc4hook
Assignment_4/pages/: index.js
Assignment_4/public/: rc4.c  rc4.js  rc4.wasm
Assignment_5/: Readme.md  next.config.mjs  package-lock.json  package.json  postcss.config.cjs
Assignment_5/hooks/: useCrypto.js  useSessionManager.js
Assignment_5/lib/: crypto-utils.js  db.js  wasmLoader.js
Assignment_5/models/: Message.js  Session.js  Users.js
Assignment_5/pages/: chat.js  forgot_password.js  index.js  register.js
Assignment_5/public/: kyber.js  kyber.wasm
LABTEST_MNS2025003/: Readme.md  package-lock.json  package.json
LABTEST_MNS2025003/lib/: wasmLoader.js
LABTEST_MNS2025003/pages/: index.js
LABTEST_MNS2025003/public/: myProg.js
LABTEST_MNS2025009/: myProg.c  package-lock.json  package.json  readme.md
LABTEST_MNS2025009/public/: mycode.js  mycode.wasm
Lab_Test_MNS2025028/: Readme.md
Lab_Test_MNS2025028/DiffieHellmanExApp/: package-lock.json  package.json  (+1 more)
(+19 files in other folders)
